# ITBench-Evaluations

./: .env.tmpl  .gitignore  DESIGN.md  README.md  aggregator.py  connection.py  env_example.txt  evaluation_results.json  json_fixer.py  laaj_agent.py  loader.py  pyproject.toml  requirements.txt  runner.py
data/: ground_truths.json
data/1/1/outputs/: agent_output.json
data/1/2/outputs/: agent_output.json
data/2/1/outputs/: agent_output.json
data/2/2/outputs/: agent_output.json
itbench_evaluations/: __init__.py  __main__.py  agent.py  aggregator.py  ciso.py  client.py  env_example.txt  loader.py  namespace_filter.py
itbench_evaluations/prompts/: __init__.py  few_shot.py  finops_main.py  main.py  remediation_plan.py
prompts/: __init__.py  entity_correctness.py  entity_correctness_k.py  fault_localization.py  few_shot.py  json_fix.py  main.py  propagation_chain.py  proximity.py  proximity_fp.py  reasoning_correctness.py  reasoning_partial.py  semantic_grouping.py
