[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
dependencies = [
    # Core evaluation dependencies (LLM-as-a-Judge)
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "asteval>=1.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
]
description = "LLM-as-a-Judge evaluation toolkit for ITBench root-cause analysis agent outputs"
name = "itbench-evaluations"
requires-python = ">=3.12,<3.14"
version = "0.1.0"

[project.optional-dependencies]
dev = ["black>=24.0.0", "isort>=5.13.0", "ruff>=0.1.0"]

[project.scripts]
itbench-evaluations = "itbench_evaluations.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["itbench_evaluations"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 120
target-version = ["py313"]

[tool.isort]
line_length = 120
profile = "black"
